--- a/index.html
+++ b/index.html
@@ -6,29 +6,32 @@
 </head>
 <body>
 	<style>
-		/* html { font-size:16px;} */
+		html { font-size:16px;}
+		body {
+			width: 100%;
+			height: 100%;
+			background-color: #e9e9eb;
+			display: flex;
+			justify-content: center;
+			flex-direction: column;
+		}
 		.title{
 			font-size:16px
 		}
 		.content-box{
 			width: 98%;
-	
-			border: 1px solid #cfcfcf;
+			background-color: #fff;
+			border: 1px solid #8b8282;
 			border-radius: 5px;
-			display: flex;
-			justify-content: center;
-			flex-direction: column;
 			color: #a6a6a6;
-			
 		}
 		.top-box{
-			padding: 10px;
+			padding: 20px;
 			display: flex;
 			align-items: center;
 			justify-content: space-between;
 			font-size: 16px;
 			background-color: #efefef;
-			
 		}
 		.normal-report{
 			padding: 5px 10px;
@@ -38,7 +41,7 @@
 		}
 		.text{
 			border-top: 1px solid #cfcfcf;
-			padding: 10px;
+			padding: 20px;
 		}
 	</style>
 	    <div id="container" class="content-box">
