--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+	<meta name="HandheldFriendly" content="true">
+	<meta name="format-detection" content="telephone=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>检测报告详情</title>
 </head>
 <body>
@@ -26,7 +29,7 @@
 			color: #a6a6a6;
 		}
 		.top-box{
-			padding: 20px;
+			padding: 10px;
 			display: flex;
 			align-items: center;
 			justify-content: space-between;
@@ -41,7 +44,7 @@
 		}
 		.text{
 			border-top: 1px solid #cfcfcf;
-			padding: 20px;
+			padding: 10px;
 		}
 	</style>
 	    <div id="container" class="content-box">
