--- a/index.html
+++ b/index.html
@@ -19,32 +19,35 @@
 			flex-direction: column;
 		}
 		.title{
-			font-size:16px
+			font-size:12px
 		}
 		.content-box{
-			width: 98%;
+			width: 95%;
 			background-color: #fff;
 			border: 1px solid #8b8282;
 			border-radius: 5px;
 			color: #a6a6a6;
 		}
 		.top-box{
-			padding: 10px;
+			padding: 5px 10px;
 			display: flex;
 			align-items: center;
 			justify-content: space-between;
-			font-size: 16px;
+			font-size: 12px;
 			background-color: #efefef;
+			border-radius: 5px 5px 0 0;
 		}
 		.normal-report{
-			padding: 5px 10px;
 			background-color: #06c601;
-			border-radius: 20px;
-			color: #ffffff ;
+			border-radius: 15px;
+			color: #ffffff;
+			width: 60px;
+			text-align: center;
 		}
 		.text{
 			border-top: 1px solid #cfcfcf;
 			padding: 10px;
+			font-size: 14px;
 		}
 	</style>
 	    <div id="container" class="content-box">
@@ -59,7 +62,7 @@
 		var param1 = urlParams.get('id')?urlParams.get('id') : 0;
 		let data = [{
 			institutionName:'四川晨升工程检测有限公司',
-			projectName:'空港发展·云璟铂樾住宅及配建幼儿园建设项目',
+			projectName:'空港发展.云璟铂樾住宅及配建幼儿园建设项目',
 			reportNumber:'SCCSQ55A2400002',
 			reportDate:'2024-03-22',
 			category:'见证取样',
@@ -74,7 +77,7 @@
 		},
 		{
 			institutionName:'四川晨升工程检测有限公司',
-			projectName:'空港发展·云璟铂樾住宅及配建幼儿园建设项目',
+			projectName:'空港发展.云璟铂樾住宅及配建幼儿园建设项目',
 			reportNumber:'SCCSQ55A2400002',
 			reportDate:'2024-03-22',
 			category:'见证取样',
