--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 			display: flex;
 			justify-content: center;
 			flex-direction: column;
+			font-family:"仿宋"
 		}
 		.title{
 			font-size:12px
